Before validation classes